# advent-of-code-2024

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/advent_of_code/day_01/: __main__.py
src/advent_of_code/day_02/: __main__.py
src/advent_of_code/day_03/: __main__.py
src/advent_of_code/day_04/: __main__.py
src/advent_of_code/day_05/: __main__.py
src/advent_of_code/day_06/: __main__.py
src/advent_of_code/day_07/: __main__.py
src/advent_of_code/day_08/: __main__.py
src/advent_of_code/day_09/: __main__.py
src/advent_of_code/shared/: grid.py  (+6 more)
tests/: advent_testcase.py
tests/day_01/: test_day_01.py
tests/day_02/: test_day_02.py
tests/day_03/: test_day_03.py
tests/day_04/: test_day_04.py
tests/day_05/: test_day_05.py
tests/day_06/: sample_input_custom.txt  sample_input_loop_wall.txt  test_day_06.py
tests/day_07/: test_day_07.py
tests/day_08/: test_day_08.py
tests/day_09/: test_day_01.py
tests/day_10/: sample_input_loops.txt  sample_input_modified.txt  test_day_10.py
tests/day_11/: test_day_11.py
tests/day_12/: test_day_12.py
tests/day_13/: test_day_13.py
tests/day_14/: test_day_14.py
tests/day_15/: test_day_15.py
tests/day_16/: input_basic.txt  input_zigzag.txt  test_day_16.py
tests/day_17/: test_day_17.py
tests/day_18/: test_day_18.py
tests/day_19/: test_day_19.py
tests/day_20/: test_day_20.py
tests/day_21/: test_day_21.py
tests/day_22/: test_day_22.py
tests/day_23/: test_day_23.py
tests/day_24/: test_day_24.py
tests/day_25/: test_day_25.py
tests/shared/: test_shared.py
(+16 files in other folders)
